--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ cache:
   directories:
   - "$HOME/.cache/pip"
   - "$HOME/.pyenv"
+env:
+  - DB=postgres
+  - SH=bash
+  - PACKAGE_VERSION="1.0.*"
 python:
   - "3.2"
   - "3.3"
