--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ python:
 
   - "3.6"
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install: "pip install -r -g requirements.txt"
 # command to run tests
 script: python main.py
